--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .color3 {
+      color: #393E46;
+    }
+    .color3bg {
+      background-color: #393E46;
+    }
+    .color4 {
+      color: #222831;
+    }
+    .color4bg {
+      background-color: #222831;
+    }
+    .color2 {
+      color: #00ADB5;
+    }
+    .color2bg {
+      background-color: #00ADB5;
+    }
+    .color1 {
+      color: #EEEEEE;
+    }
+    .color1bg {
+      background-color: #EEEEEE;
+    }
+  }
